--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="Fav icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Fav icon/favicon-16x16.png">
     <link rel="manifest" href="Fav icon/site.webmanifest">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-
-
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-database.js"></script>
+        
 </head>
 
 <body>
@@ -43,5 +40,6 @@
 
 </body>
 <script src="app.js"></script>
+
 
 </html>
